<resources>
    <string name="app_name">Online Contacts</string>
    <string name="sample_contact_name">Dwi Candra Permana</string>
    <string name="example_phone_number">082121824775</string>
    <string name="add_contact">Tambah Kontak</string>
    <string name="contact_name">Nama Kontak</string>
    <string name="contact_num">Nomor Telepon</string>
    <string name="edit_contact">Ubah Kontak</string>
    <string name="contact_list">Daftar Kontak</string>
    <string name="add_new_contact">Tambah Kontak Baru</string>
    <string name="message_add_contact">Silakan isi identitas kontak di bawah ini.</string>
    <string name="update">Update</string>
    <string name="example_name">Dwi Candra Permana</string>
    <string name="your_contact">Kontak Anda</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Yakin ingin menghapus kontak \"</string>
    <string name="sure">Yakin?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="refresh_message">Berikut adalah daftar kontak Anda. Tarik ke bawah untuk menyegarkan.</string>
    <string name="example_number">082121824775</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="nim">18.11.0004</string>
    <string name="email">Email</string>
    <string name="my_email">dwichan@outlook.com</string>
    <string name="visit_github">Kunjungi GitHub Saya</string>
    <string name="about">About</string>
    <string name="example_error">ERROR 404</string>
    <string name="no_data">Tidak ada data.</string>
</resources>