<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgContact"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tvContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgContact"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/example_name"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvYourContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvContactName"
        android:layout_centerHorizontal="true"
        android:text="@string/your_contact" />

    <ImageView
        android:id="@+id/imgCall"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_below="@id/tvYourContact"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/phone_number"
        android:src="@drawable/ic_baseline_local_phone_48" />

    <TextView
        android:id="@+id/tvTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvYourContact"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/imgCall"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTextPhone"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgCall"
        android:text="@string/example_number"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/update" />

</RelativeLayout>