<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertUpdateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContactName"
        android:layout_below="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edtContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContactNum"
        android:layout_below="@id/tilContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edtContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_num"
            android:inputType="numberSigned"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/tilContactNum"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:text="@string/add_contact" />

</RelativeLayout>